sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: not found: value v
    while((isSmallerThan(v,getValue(i+k)))&&(i+k>0))
                         ^