sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var temp = 0
  var k = 0
  
  for(i<- 1 to getValueCount()-1)
  {
  	temp = getValue(i)
    
    while((isSmallerThan(v,getValue(i+k)))&&(i+k>0))
    {
      setValue(i+k+1,getValue(i+k))
      k+=1
    }
    
  }
}